theory.tex isolating 8 historical topics

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -743,6 +743,16 @@ j%% TODO understand what this is about
 
 % == Sources metamaterial other ==
 % -- non-metamaterial, but related --/*{{{*/
+@article{naik2011oxides,
+  title={Oxides and nitrides as alternative plasmonic materials in the optical range},
+  author={Naik, Gururaj V and Kim, Jongbum and Boltasseva, Alexandra},
+  journal={Optical Materials Express},
+  volume={1},
+  number={6},
+  pages={1090--1099},
+  year={2011},
+  publisher={Optical Society of America}
+}
 %% nearly 10^4 citations
 @article{veselago1968,
   title={The Electrodynamics of Substances with Simultaneously Negative Values of $\varepsilon$ and $\mu$},
@@ -947,6 +957,16 @@ j%% TODO understand what this is about
 }
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
+@article{zhou2008efficient,
+  title={An efficient way to reduce losses of left-handed metamaterials},
+  author={Zhou, Jiangfeng and Koschny, Thomas and Soukoulis, Costas M},
+  journal={Optics Express},
+  volume={16},
+  number={15},
+  pages={11147--11152},
+  year={2008},
+  publisher={Optical Society of America}
+}
 @article{rockstuhl2008light,
   title={Light propagation in a fishnet metamaterial},
   author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
@@ -2158,4 +2178,23 @@ lts.fzu.cz/pdf/d-js.pdf
   volume={44},
   pages={109--110},
   year={1978}
+}
+@article{alitalo2009electromagnetic,
+  title={Electromagnetic cloaking with metamaterials},
+  author={Alitalo, Pekka and Tretyakov, Sergei},
+  journal={Materials today},
+  volume={12},
+  number={3},
+  pages={22--29},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{dollin1961possibility,
+  title={On the possibility of comparison of three-dimensional electromagnetic systems with nonuniform anisotropic filling},
+  author={Dollin, LS},
+  journal={Izv. VUZov Radiofizika},
+  volume={4},
+  number={5},
+  pages={964--967},
+  year={1961}
 }
